--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "firebase": "^3.6.2",
     "jquery": "^3.1.1",
+    "moment": "^2.17.1",
     "semantic-ui-css": "^2.2.4",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1"
